--- a/spring-test01/.settings/org.eclipse.core.resources.prefs
+++ b/spring-test01/.settings/org.eclipse.core.resources.prefs
@@ -4,6 +4,7 @@ encoding//WebRoot/WEB-INF/jsp/allin.jsp=UTF-8
 encoding//WebRoot/WEB-INF/jsp/allout.jsp=UTF-8
 encoding//WebRoot/WEB-INF/jsp/error1.jsp=UTF-8
 encoding//WebRoot/WEB-INF/jsp/exit.jsp=UTF-8
+encoding//WebRoot/WEB-INF/jsp/in.jsp=UTF-8
 encoding//WebRoot/WEB-INF/jsp/insuccess.jsp=UTF-8
 encoding//WebRoot/WEB-INF/jsp/out.jsp=UTF-8
 encoding//WebRoot/WEB-INF/jsp/success.jsp=UTF-8
