--- a/spring-test01/WebRoot/WEB-INF/web.xml
+++ b/spring-test01/WebRoot/WEB-INF/web.xml
@@ -9,12 +9,12 @@
        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
        <init-param>
        	<param-name>encoding</param-name>
-       	<param-value>utf-8</param-value>
+       	<param-value>UTF-8</param-value>
        </init-param>
 </filter>
 <filter-mapping>  
        <filter-name>CharacterEncodingFilter</filter-name>  
-       <url-pattern>/.jsp</url-pattern>  
+       <url-pattern>/*</url-pattern>  
    </filter-mapping>  
    
 
@@ -27,8 +27,6 @@
        <servlet-name>FormHanding</servlet-name>  
        <url-pattern>/</url-pattern>  
    </servlet-mapping>  
-   <session-config>  
-         <session-timeout>1</session-timeout>  
-   </session-config>
+
    
 </web-app>
